# Shadowgram

./: .gitignore  ARCHITECTURE.md  BUILD_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE_2_TRACKER.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  REPO_AUDIT.md  SECURITY.md  build.sh  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.cph/: .q1.py_68cde2a27677d2862046ece52d71be9b.prob
.github/workflows/: build.yml
crates/crypto/: Cargo.toml
crates/crypto/src/: aead.rs  double_ratchet.rs  kdf.rs  key_exchange.rs  keys.rs  lib.rs
crates/identity/: Cargo.toml
crates/identity/src/: identity.rs  lib.rs  pairwise.rs  qr.rs  rotation.rs  threshold.rs
crates/messenger/: Cargo.toml
crates/messenger/src/: chat.rs  client.rs  contacts.rs  group.rs  lib.rs  message.rs  psi.rs  sync.rs
crates/messenger/tests/: security_regression.rs
crates/network/: Cargo.toml
crates/network/src/: cover_traffic.rs  dht.rs  lib.rs  mailbox.rs  message_transport.rs  mixnet.rs  noise.rs  padding.rs  relay.rs  tor.rs  tor_service.rs  transports.rs
crates/storage/: Cargo.toml
crates/storage/src/: database.rs  encrypted_cache.rs  lib.rs  schema.rs
crates/storage/src/migrations/: 001_init.sql  002_relay_mailbox.sql
crates/tauri-backend/: Cargo.toml
crates/tauri-backend/src/: commands.rs  lib.rs  state.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: message_parse.rs
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  profile.rs  state.rs  tor_manager.rs  transport.rs
src/components/: ChatView.tsx  IdentitySetup.tsx  Sidebar.tsx
tests/: Cargo.toml  README.md  integration_tests.rs
