[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"

# Shadowgram crates
shadowgram-crypto = { path = "../crates/crypto" }
shadowgram-identity = { path = "../crates/identity" }
shadowgram-network = { path = "../crates/network" }
shadowgram-messenger = { path = "../crates/messenger" }
shadowgram-storage = { path = "../crates/storage" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]