[package]
name = "shadowgram-app"
version = "0.1.0"
description = "Shadowgram Desktop App"
authors = ["Aditya"]
edition = "2021"

[lib]
name = "shadowgram_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
parking_lot = "0.12"
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
futures = "0.3"
tor-hsservice = "0.43"

# Shadowgram crates
shadowgram-crypto = { path = "../crates/crypto" }
shadowgram-identity = { path = "../crates/identity" }
shadowgram-network = { path = "../crates/network" }
shadowgram-messenger = { path = "../crates/messenger" }
shadowgram-storage = { path = "../crates/storage" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
