[package]
name = "shadowgram-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shadowgram-crypto = { path = "../crates/crypto" }
shadowgram-identity = { path = "../crates/identity" }
shadowgram-network = { path = "../crates/network" }
shadowgram-messenger = { path = "../crates/messenger" }
shadowgram-storage = { path = "../crates/storage" }

tokio = { version = "1.35", features = ["full", "test-util"] }
x25519-dalek = "2.0"
rand = "0.8"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[test]]
name = "integration_tests"
path = "integration_tests.rs"
harness = true