[package]
name = "shadowgram-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cryptographic core for Shadowgram messenger - X25519, ML-KEM, Double Ratchet"

[dependencies]
# Cryptography
x25519-dalek.workspace = true
ed25519-dalek.workspace = true
curve25519-dalek.workspace = true
# Post-Quantum: ML-KEM-768
ml-kem.workspace = true
chacha20poly1305.workspace = true
aes-gcm.workspace = true
hkdf.workspace = true
sha2.workspace = true
blake3.workspace = true
digest.workspace = true

# Zeroization
zeroize.workspace = true
subtle.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true
base64.workspace = true

# Utilities
rand.workspace = true
rand_chacha.workspace = true
rand_core.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true