[package]
name = "shadowgram-network"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Anonymous network layer for Shadowgram - Tor, mixnet, DHT discovery"

[dependencies]
shadowgram-crypto = { path = "../crypto" }
shadowgram-identity = { path = "../identity" }

# Cryptography
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
sha2.workspace = true
zeroize.workspace = true
base64.workspace = true
hex.workspace = true

# Tor
arti-client.workspace = true
tor-error.workspace = true
tor-rtcompat = "0.22"

# DHT / P2P
libp2p.workspace = true
libp2p-kad.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true

# Serialization
serde.workspace = true
bincode.workspace = true
bytes.workspace = true

# Utilities
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

# Padding utils
subtle.workspace = true
